# firecore-battle-gui

./: Cargo.toml  TODO.md
src/: action.rs  context.rs  lib.rs  party.rs  ui.rs  view.rs
src/transition/: trainer.rs
src/transition/introduction/: basic.rs  mod.rs  trainer.rs
src/transition/opener/: manager.rs  mod.rs  trainer.rs  wild.rs
src/ui/: background.rs  exp_bar.rs  text.rs  view.rs
src/ui/panels/: battle.rs  fight.rs  level.rs  mod.rs  move_info.rs  moves.rs  target.rs
src/ui/pokemon/: mod.rs  moves.rs  spawner.rs  status.rs
