[package]
name = "firecore-battle-gui"
version = "0.5.0-beta.2021-10-23"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[features]
default = ["audio"]
audio = ["firecore-pokedex-engine/audio"]

[dependencies]
log = "0.4"
firecore-battle = { git = "https://github.com/fiirecore/battle", default-features = false, features = ["default_endpoint"] }
firecore-pokedex-engine = { git = "https://github.com/DoNotDoughnut/firecore-pokedex-engine", default-features = false }
rand = { version = "0.8", default-features = false }
crossbeam-channel = "0.5"
hashbrown = "0.11"